# talking-avatar-generator-codex

./: .gitignore  .govkit  AGENTS.md  pyproject.toml  pytest.ini  talking_avatar_generator.db
.agents/skills/adr-author/: SKILL.md
.agents/skills/architecture-preflight/: SKILL.md
.agents/skills/implementation-plan/: SKILL.md
.agents/skills/spec-planning/: SKILL.md
adapters/: AGENTS.md  local_avatar_asset_storage.py  logging_observability.py  mock_avatar_provider.py  sqlite_avatar_job_repository.py  system_clock.py
api/: AGENTS.md  __init__.py  app.py  avatar_jobs.py  dependencies.py  models.py
ci/github/: deepeval-gate.yml  eval-gate.yml  guardrails-check.yml  l3-quality-gate.yml  promptfoo-gate.yml  quality-gate.yml  ui-eval-gate.yml  ui-quality-gate.yml
common/: __init__.py  errors.py  settings.py
docs/backend/architecture/: AGENT_ARCHITECTURE.md  API_CONVENTIONS.md  ARCH_CONTRACT.md  CLI_CONVENTIONS.md  TESTING.md  (+12 more)
features/talking_avatar_generator/: acceptance.feature  architecture_preflight.md  eval_criteria.yaml  nfrs.md  plan.md
governance/backend/: importlinter-reference.toml
ports/: AGENTS.md
ports/inbound/: __init__.py  avatar_job_query.py  avatar_processing.py  avatar_submission.py
ports/outbound/: avatar_asset_storage.py  avatar_job_repository.py  avatar_provider.py  clock.py  observability.py
security/: AGENTS.md
services/: AGENTS.md
services/avatar_generation/: __init__.py  models.py  query_models.py  query_service.py  service.py  validation.py
templates/: avatar_job_detail.html  avatar_submission.html
tests/: conftest.py
tests/bdd/: test_avatar_job_detail.py  test_avatar_processing.py  test_avatar_submission.py
tests/contract/: test_avatar_job_detail_api_contract.py  test_avatar_submission_api_contract.py  test_mock_avatar_provider_contract.py
tests/unit/: test_avatar_generation_service.py  test_avatar_job_query_service.py  test_avatar_processing_service.py
(+21 files in other folders)
